--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Retrica</string>
+    <string name="image_main">main image</string>
+    <string name="btn_main_grayscale">Black</string>
+    <string name="btn_main_default">Default</string>
 </resources>
